# RotaryUsb

./: .gitignore  README.md  _codeql_detected_source_root
firmware/: README.md  boot.py  code.py  code_generic_hid.py
firmware-cpp/: CMakeLists.txt  README.md  encoder.cpp  encoder.h  main.cpp  main_generic_hid.cpp  tusb_config.h
windows-example/: Program.cs  README.md  RotaryUsbExample.csproj
